--- a/pkg/qbit/server/static/index.html
+++ b/pkg/qbit/server/static/index.html
@@ -35,11 +35,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <span class="navbar-brand">Debrid Manager</span>
+
     </div>
 </nav>
 
 <div class="container mt-4">
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-8">
             <div class="mb-3">
                 <label for="magnetURI" class="form-label">Magnet Link</label>
@@ -47,7 +48,8 @@
             </div>
             <div class="mb-3">
                 <label for="selectArr" class="form-label">Enter Category</label>
-                <input type="email" class="form-control" id="selectArr" placeholder="Enter Category(e.g sonarr, radarr, radarr4k)">
+                <input type="email" class="form-control" id="selectArr"
+                       placeholder="Enter Category(e.g sonarr, radarr, radarr4k)">
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="isSymlink">
@@ -61,27 +63,33 @@
                 </button>
             </div>
         </div>
-<!--        <div class="col-md-6">-->
-
-<!--                        <div class="mb-3 d-none">-->
-<!--                            <select class="form-select mb-3 select2-ajax" id="selectContent">-->
-<!--                                <option></option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-<!--                        <div class="mb-3 d-none">-->
-<!--                            <select class="form-select mb-3 select2-multi" id="selectSeason" multiple-->
-<!--                                    style="width: 100%; display: none;">-->
-<!--                                <option value="all">Select All</option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-<!--                        <div class="mb-4 d-none">-->
-<!--                            <select class="form-select mb-3 select2-multi" id="selectEpisode" multiple-->
-<!--                                    style="width: 100%; display: none;">-->
-<!--                                <option value="all">Select All</option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-
-<!--        </div>-->
+    </div>
+    <hr class="mb-4">
+    <div class="row">
+        <div class="col-md-8">
+            <h4>Repair</h4>
+            <div class="mb-3">
+                <label for="selectRepairArr" class="form-label">Select ARR</label>
+                <select class="form-select" id="selectRepairArr">
+                    <option value="">Select ARR</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="tvids" class="form-label">TV IDs</label>
+                <input type="text" class="form-control" id="tvids" placeholder="Enter TV IDs (comma-separated)">
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="isAsync" checked>
+                <label class="form-check-label" for="isAsync">
+                    Repair Asynchronously(run in background)
+                </label>
+            </div>
+            <div class="mt-3">
+                <button class="btn btn-primary" id="repairBtn">
+                    Repair
+                </button>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -93,19 +101,9 @@
 <script>
     $(document).ready(function () {
         let $selectArr = $('#selectArr');
-        let $selectContent = $('#selectContent');
-        let $selectSeason = $('#selectSeason');
-        let $selectEpisode = $('#selectEpisode');
+        let $selectRepairArr = $('#selectRepairArr');
         let $addBtn = $('#addToArr');
-        const $contentSearch = $('#contentSearch');
-        const $searchResults = $('#searchResults');
-        let isSonarr = true;
-        let searchTimeout;
-        let selectedArr, selectedContent, selectedSeasons, selectedEpisodes;
-
-        // Initially show only selectArr, hide others
-        $selectSeason.hide().closest('.mb-3').hide();
-        $selectEpisode.hide().closest('.mb-3').hide();
+        let $repairBtn = $('#repairBtn');
 
         // Initialize Select2
         $('.select2-multi').select2({
@@ -115,175 +113,21 @@
             allowClear: true
         });
 
-        // Also hide the Select2 containers
-        $('.select2-container--bootstrap-5').hide();
-
-        $selectContent.select2({
-            theme: 'bootstrap-5',
-            width: '100%',
-            placeholder: 'Search shows/movies...',
-            allowClear: true,
-            minimumInputLength: 2,
-            ajax: {
-                url: '/internal/search',
-                dataType: 'json',
-                delay: 250,
-                data: function (params) {
-                    return {
-                        term: params.term
-                    };
-                },
-                processResults: function (data) {
-                    return {
-                        results: data.map(function (item) {
-                            return {
-                                id: item.id,
-                                text: item.media_type === 'movie' ? item.title : item.name,
-                                media_type: item.media_type,
-                                poster: item.poster_path ?
-                                    'https://image.tmdb.org/t/p/w92' + item.poster_path : null,
-                                year: item.media_type === 'movie' ?
-                                    (item.release_date ? item.release_date.substring(0, 4) : '') :
-                                    (item.first_air_date ? item.first_air_date.substring(0, 4) : '')
-                            };
-                        })
-                    };
-                },
-                cache: true
-            },
-            templateResult: formatResult,
-            templateSelection: formatSelection
-        });
-
-        function formatResult(item) {
-            if (!item.id) return item.text;
-
-            return $(`
-        <div class="select2-result d-flex align-items-center gap-2">
-            ${item.poster ?
-                `<img src="${item.poster}" style="width: 45px; height: 68px; object-fit: cover;">` :
-                '<div style="width: 45px; height: 68px; background: #eee;"></div>'
-            }
-            <div>
-                <div class="fw-bold">${item.text}</div>
-                <small class="text-muted">
-                    ${item.year} • ${item.media_type === 'movie' ? 'Movie' : 'TV Series'}
-                </small>
-            </div>
-        </div>
-    `);
-        }
-
-        function formatSelection(item) {
-            if (!item.id) return item.text;
-            return item.text + (item.year ? ` (${item.year})` : '');
-        }
-
-// Handle selection
-        $selectContent.on('select2:select', function (e) {
-            selectedContent = e.params.data.id;
-            const mediaType = e.params.data.media_type;
-
-            if (mediaType === 'tv') {
-                $selectSeason.show().closest('.mb-3').show();
-                $selectSeason.next('.select2-container--bootstrap-5').show();
-                // Fetch seasons (your existing seasons fetch code)
-                fetch(`/internal/seasons/${selectedContent}`)
-                    .then(response => response.json())
-                    .then(seasons => {
-                        $selectSeason.empty().append('<option value="all">Select All</option>');
-                        seasons.forEach(season => {
-                            $selectSeason.append(`<option value="${season}">Season ${season}</option>`);
-                        });
-                        $selectSeason.trigger('change.select2');
-                    })
-                    .catch(error => console.error('Error fetching seasons:', error));
-            } else {
-                // For movies, show the Add to Arr button directly
-                $selectSeason.hide().closest('.mb-3').hide();
-                $selectSeason.next('.select2-container--bootstrap-5').hide();
-                $selectEpisode.hide().closest('.mb-3').hide();
-                $selectEpisode.next('.select2-container--bootstrap-5').hide();
-                $addBtn.show();
-            }
-        });
-
-        // Fetch Arrs
         function fetchArrs() {
             fetch('/internal/arrs')
                 .then(response => response.json())
                 .then(arrs => {
+                    // Populate both selects
                     $selectArr.empty().append('<option value="">Select Arr</option>');
+                    $selectRepairArr.empty().append('<option value="">Select Arr</option>');
+
                     arrs.forEach(arr => {
                         $selectArr.append(`<option value="${arr.name}">${arr.name}</option>`);
+                        $selectRepairArr.append(`<option value="${arr.name}">${arr.name}</option>`);
                     });
                 })
                 .catch(error => console.error('Error fetching arrs:', error));
         }
-
-        // Handle content selection
-        $selectContent.change(function () {
-            selectedContent = $(this).val();
-            selectedArr = $selectArr.val();
-
-            if (!selectedContent) {
-                $selectSeason.hide().closest('.mb-3').hide();
-                $selectSeason.next('.select2-container--bootstrap-5').hide();
-                $selectEpisode.hide().closest('.mb-3').hide();
-                $selectEpisode.next('.select2-container--bootstrap-5').hide();
-                return;
-            }
-
-            if (isSonarr) {
-                $selectSeason.show().closest('.mb-3').show();
-                $selectSeason.next('.select2-container--bootstrap-5').show();
-                // Fetch seasons
-                fetch(`/internal/seasons/${selectedContent}`)
-                    .then(response => response.json())
-                    .then(seasons => {
-                        $selectSeason.empty().append('<option value="all">Select All</option>');
-                        seasons.forEach(season => {
-                            $selectSeason.append(`<option value="${season}">Season ${season}</option>`);
-                        });
-                        $selectSeason.trigger('change.select2');
-                    })
-                    .catch(error => console.error('Error fetching seasons:', error));
-            } else {
-                // For Radarr, show the Add to Arr button directly
-                $selectSeason.hide().closest('.mb-3').hide();
-                $selectSeason.next('.select2-container--bootstrap-5').hide();
-                $selectEpisode.hide().closest('.mb-3').hide();
-                $selectEpisode.next('.select2-container--bootstrap-5').hide();
-                $addBtn.show();
-            }
-        });
-
-        // Handle season selection
-        $selectSeason.change(function () {
-            selectedSeasons = $(this).val();
-            console.log('Selected seasons:', selectedSeasons);
-
-            if (!selectedSeasons || selectedSeasons.includes('all')) {
-                $selectEpisode.hide().closest('.mb-3').hide();
-                $selectEpisode.next('.select2-container--bootstrap-5').hide();
-                $addBtn.show();
-                return;
-            }
-
-            $selectEpisode.show().closest('.mb-3').show();
-            $selectEpisode.next('.select2-container--bootstrap-5').show();
-            fetch(`/internal/episodes/${selectedContent}?seasons=${selectedSeasons.join(',')}`)
-                .then(response => response.json())
-                .then(episodes => {
-                    $selectEpisode.empty().append('<option value="all">Select All</option>');
-                    episodes.forEach(episode => {
-                        $selectEpisode.append(`<option value="${episode}">Episode ${episode}</option>`);
-                    });
-                    $selectEpisode.trigger('change.select2');
-                })
-                .catch(error => console.error('Error fetching episodes:', error));
-            $addBtn.show();
-        });
 
         $addBtn.click(function () {
             let oldText = $(this).text();
@@ -292,7 +136,7 @@
             if (!magnet) {
                 $(this).prop('disabled', false).text(oldText);
                 alert('Please provide a magnet link or upload a torrent file!');
-                
+
                 return;
             }
             let data = {
@@ -326,8 +170,45 @@
                 });
         });
 
-        // Initial fetch of Arrs
-        //fetchArrs();
+        fetchArrs();
+        $repairBtn.click(function () {
+            let oldText = $(this).text();
+            $(this).prop('disabled', true)
+                .prepend('<span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>');
+
+            let selectedArr = $selectRepairArr.val();
+            let tvids = $('#tvids').val();
+
+            let data = {
+                arr: selectedArr,
+                tvids: tvids,
+                async: $('#isAsync').is(':checked'),
+            };
+
+            fetch('/internal/repair', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            })
+                .then(async response => {
+                    if (!response.ok) {
+                        const errorText = await response.text();
+                        throw new Error(errorText);
+                    }
+                    return response.json();
+                })
+                .then(result => {
+                    $(this).prop('disabled', false).text(oldText);
+                    alert(result);
+                })
+                .catch(error => {
+                    $(this).prop('disabled', false).text(oldText);
+                    alert(`Error repairing: ${error.message || error}`);
+                });
+
+        });
     });
 </script>
 </body>
