--- a/pkg/web/web/download.html
+++ b/pkg/web/web/download.html
@@ -22,13 +22,21 @@
                         <input type="text" class="form-control" id="category" name="arr" placeholder="Enter Category (e.g sonarr, radarr, radarr4k)">
                     </div>
 
-                    <div class="mb-3">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="isSymlink" name="notSymlink">
-                            <label class="form-check-label" for="isSymlink">
-                                Download real files instead of symlinks
-                            </label>
+                    <div class="row mb-3">
+                        <div class="col-md-2 mb-3">
+                            <div class="form-check d-inline-block me-3">
+                                <input type="checkbox" class="form-check-input" id="isSymlink" name="notSymlink">
+                                <label class="form-check-label" for="isSymlink">No Symlinks</label>
+                            </div>
                         </div>
+                        <div class="col-md-2 mb-3">
+                            <div class="form-check d-inline-block">
+                                <input type="checkbox" class="form-check-input" name="downloadUncached" id="downloadUncached">
+                                <label class="form-check-label" for="downloadUncached">Download Uncached</label>
+                            </div>
+                        </div>
+
+
                     </div>
 
                     <button type="submit" class="btn btn-primary" id="submitDownload">
@@ -44,15 +52,19 @@
             const loadSavedDownloadOptions = () => {
                 const savedCategory = localStorage.getItem('downloadCategory');
                 const savedSymlink = localStorage.getItem('downloadSymlink');
+                const savedDownloadUncached = localStorage.getItem('downloadUncached');
                 document.getElementById('category').value = savedCategory || '';
-                document.getElementById('isSymlink').checked = savedSymlink === 'true'
+                document.getElementById('isSymlink').checked = savedSymlink === 'true';
+                document.getElementById('downloadUncached').checked = savedDownloadUncached === 'true';
             };
 
             const saveCurrentDownloadOptions = () => {
                 const category = document.getElementById('category').value;
                 const isSymlink = document.getElementById('isSymlink').checked;
+                const downloadUncached = document.getElementById('downloadUncached').checked;
                 localStorage.setItem('downloadCategory', category);
                 localStorage.setItem('downloadSymlink', isSymlink.toString());
+                localStorage.setItem('downloadUncached', downloadUncached.toString());
             };
 
             // Load the last used download options from local storage
@@ -98,6 +110,7 @@
 
                     formData.append('arr', document.getElementById('category').value);
                     formData.append('notSymlink', document.getElementById('isSymlink').checked);
+                    formData.append('downloadUncached', document.getElementById('downloadUncached').checked);
 
                     const response = await fetch('/internal/add', {
                         method: 'POST',
