--- a/pkg/web/web/repair.html
+++ b/pkg/web/web/repair.html
@@ -31,7 +31,7 @@
 
                 <div class="mb-3">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="autoProcess" checked>
+                        <input class="form-check-input" type="checkbox" id="autoProcess">
                         <label class="form-check-label" for="autoProcess">
                             Auto Process(this will delete and re-search broken media)
                         </label>
