--- a/pkg/web/web/download.html
+++ b/pkg/web/web/download.html
@@ -127,8 +127,8 @@
                         }
                     } else {
                         createToast(`Successfully added ${result.results.length} torrents!`);
-                        document.getElementById('magnetURI').value = '';
-                        document.getElementById('torrentFiles').value = '';
+                        //document.getElementById('magnetURI').value = '';
+                        //document.getElementById('torrentFiles').value = '';
                     }
                 } catch (error) {
                     createToast(`Error adding downloads: ${error.message}`, 'error');
