--- a/pkg/web/web/repair.html
+++ b/pkg/web/web/repair.html
@@ -268,6 +268,9 @@
                 } else if (job.status === 'pending') {
                     status = 'Pending';
                     statusClass = 'text-warning';
+                } else if (job.status === "processing") {
+                    status = 'Processing';
+                    statusClass = 'text-info';
                 }
 
                 row.innerHTML = `
@@ -486,6 +489,9 @@
             } else if (job.status === 'pending') {
                 status = 'Pending';
                 statusClass = 'text-warning';
+            } else if (job.status === "processing") {
+                status = 'Processing';
+                statusClass = 'text-info';
             }
 
             document.getElementById('modalJobStatus').innerHTML = `<span class="${statusClass}">${status}</span>`;
